# src/user/user.controller.js
@@ -421,57 +421,3 @@ exports.uploadImage = async (req, res) => {
     res.json(responser('Upload Image.', [{ imagePath: imagePath }]));
   });
 };
-
-exports.upsertExpenseCategory = async (req, res) => {
-  // await isEditAccess('latest_expense_category', req.user);
-  removeNullValueKey(req.body);
-  req.body.expense_category_name = req.body.expense_category_name.toUpperCase();
-  let isUpadtion = false;
-  if (req.body.expense_category_uuid) {
-    let isExist = await isValidRecord('latest_expense_category', {
-      expense_category_uuid: req.body.expense_category_uuid,
-    });
-    if (!isExist) throwError(404, 'expense_category not found.');
-    isUpadtion = true;
-  } else {
-    let isExist = await isValidRecord('latest_expense_category', {
-      expense_category_name: req.body.expense_category_name,
-    });
-    if (isExist) throwError(404, 'expense_category is already exists.');
-    req.body.expense_category_uuid = uuidv4();
-  }
-  let expense_category = await insertRecords('expense_category', req.body);
-  res.json(responser('expense_category created  successfully.', req.body));
-};
-
-exports.getExpenseCategory = async (req, res) => {
-  const {
-    expense_category_uuid,
-    pageNo,
-    itemPerPage,
-    from_date,
-    to_date,
-    status,
-    columns,
-    value,
-  } = req.query;
-
-  let tableName = 'latest_expense_category';
-  let filter = filterFunctionality(
-    {
-      expense_category_uuid,
-    },
-    status,
-    to_date,
-    from_date,
-    Array.isArray(columns) ? columns : [columns],
-    value,
-  );
-  filter = await roleFilterService(filter, tableName, req.user);
-  let pageFilter = pagination(pageNo, itemPerPage);
-  let totalRecords = await getCountRecord(tableName, filter);
-  let result = await getRecords(tableName, filter, pageFilter);
-  return res.json(
-    responser('All expense_category', result, result.length, totalRecords),
-  );
-};
